--- a/views/index.html
+++ b/views/index.html
@@ -9,32 +9,32 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <header>
+        <header class="main-header">
             <div class="top-header">
                 <div class="logo"> 
                     <img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
                 </div>
                 <div class="form" action="#" method="GET">
-                    <div class="input">Buscar productos, marcas y más</div>
+                    <div class="input">¿Qué estás buscando?</div>
                     <div class="submit"><i class="fa fa-search"></i></div>
                 </div>
-                <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+                <h4><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</h4>
             </div>
-            <nav>
-                <ul>
+            <nav class= "main-navbar">
+                <ul class = "left-navbar">
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Tiendas Oficiales</a></li>
                     <li><a href="#">Vender</a></li>
                     <li><a href="#">Ayuda</a></li>
                 </ul>
-                <ul>
-                    <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-                    <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                    <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+                <ul class = "right-navbar">
+                    <li><a href="/register">Creá tu cuenta<i class="far fa-address-card"></i></a></li>
+                    <li><a href="/login">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="#">Mis compras<i class="fas fa-shopping-basket"></i></a></li>
                 </ul>
             </nav>
             <div class="burger-menu">
-                <i class="fa fa-bars burger"></i>
+                <a href="#"><i class="fa fa-bars burger"></i></a>
             </div>
         </header>
         <section class="banner">
@@ -44,7 +44,7 @@
             <section class="last-visit">
                 <h3>Basado en tu última visita</h3>
                 <div class="products">
-                    <article>
+                    <article class="product">
                         <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
                         <div class="main-article">
                             <i class="fas fa-truck"></i>
@@ -53,7 +53,7 @@
                             <h4 class="description">Cafetera Moulinex</h4>
                         </div>
                     </article>
-                    <article>
+                    <article class="product">
                         <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
                         <div class="main-article">
                             <i class="fas fa-truck"></i>
@@ -62,7 +62,7 @@
                             <h4 class="description">MacBook Pro 2019</h4>
                         </div>
                     </article>
-                    <article>
+                    <article class="product">
                         <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
                         <div class="main-article">
                             <i class="fas fa-truck"></i>
@@ -71,7 +71,7 @@
                             <h4 class="description">Samsung Galaxy S10</h4>
                         </div>
                     </article>
-                    <article>
+                    <article class="product">
                         <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
                         <div class="main-article">
                             <i class="fas fa-truck"></i>
@@ -85,7 +85,7 @@
             <section class="offers">
                 <h3>Ofertas</h3>
                 <div class="products">
-                    <article>
+                    <article class="product">
                         <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
                         <div class="main-article">
                             <i class="fas fa-truck"></i>
@@ -94,7 +94,7 @@
                             <h4 class="description">Cafetera Moulinex</h4>
                         </div>
                     </article>
-                    <article>
+                    <article class="product">
                         <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
                         <div class="main-article">
                             <i class="fas fa-truck"></i>
@@ -103,7 +103,7 @@
                             <h4 class="description">MacBook Pro 2019</h4>
                         </div>
                     </article>
-                    <article>
+                    <article class="product">
                         <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
                         <div class="main-article">
                             <i class="fas fa-truck"></i>
@@ -112,7 +112,7 @@
                         <h4 class="description">Samsung Galaxy S10</h4>
                         </div>
                     </article>
-                    <article>
+                    <article class="product">
                         <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
                         <div class="main-article">
                             <i class="fas fa-truck"></i>
@@ -125,7 +125,23 @@
             </section>
         </main>
         <footer>
-            
+            <div>
+                <i class="fas fa-comment-dollar"></i>
+                <h5>Pagá con tarjeta o en efectivo</h5>
+                <p>Con Mercado Liebre Cash tenés cuotas sin interés con tarjetas o efectivo en puntos de pago.¡Y siempre es seguro!</p>
+            </div>
+            <div>
+                <i class="fas fa-gift"></i>
+                <h5>Envío gratis desde $ 2.500</h5>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+            </div>
+            <div>
+                <i class="fas fa-user-shield"></i>
+                <h5>Seguridad de principio a fin</h5>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre no hay nada que no puedas hacer porque estas siempre protegid@.</p>
+            </div>
+            <p> Copyright © 1999-2000 MercadoLiebre S.R.L.</p>
+                    
         </footer>
         
     </body>
